1-BUILD/builds/1/log
Started by user [8mha:////4InN0TdsPXJ9ysdtQBQIloeXetrP8IyWbSOAlMvuffniAAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzuEgZu/dLi1CL9lMT80hQAlab3OsAAAAA=[0mDaoud ELHOR
Running as SYSTEM
Building in workspace /var/lib/jenkins/workspace/1-BUILD
[1-BUILD] $ /bin/sh -xe /tmp/jenkins6576958680578853932.sh
+ mkdir -p /tmp/ajc
+ rm -rf /tmp/ajc/*
+ echo 
public class Main {
public static void main(String[] args) {
System.out.println(« Hello, World ! ») ;
}
}

+ javac /tmp/ajc/Main.java
/tmp/ajc/Main.java:4: error: illegal character: '\u00ab'
System.out.println(« Hello, World ! ») ;
                   ^
/tmp/ajc/Main.java:4: error: not a statement
System.out.println(« Hello, World ! ») ;
                     ^
/tmp/ajc/Main.java:4: error: ';' expected
System.out.println(« Hello, World ! ») ;
                          ^
/tmp/ajc/Main.java:4: error: not a statement
System.out.println(« Hello, World ! ») ;
                            ^
/tmp/ajc/Main.java:4: error: ';' expected
System.out.println(« Hello, World ! ») ;
                                 ^
/tmp/ajc/Main.java:4: error: illegal character: '\u00bb'
System.out.println(« Hello, World ! ») ;
                                    ^
6 errors
Build step 'Execute shell' marked build as failure
Finished: FAILURE
